realizando cambios y mejoras con el delete y el post del carrito (todavia en proceso)

--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -13,6 +13,7 @@
     </form>
     <button type="submit" id="boton">Enviar</button> <br>
     </div>
+    <button class="cart" onclick="">Mostrar Carrito</button>
 
   <div class="productos" id="products">
     
