--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,13 @@ body{
     background-color: rgb(91, 161, 70);
 }
 
+.cart{
+  width: 100px;
+  height: 40px;
+  background-color: rgb(39, 39, 247);
+  color: rgb(255, 255, 255);
+}
+
 .container {  
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -10,7 +17,7 @@ body{
     grid-auto-flow: row;
     grid-template-areas:
       "titulo titulo titulo"
-      "formulario . ."
+      "formulario formulario formulario"
       "productos productos productos";
   }
 
@@ -19,8 +26,7 @@ body{
     grid-area: titulo;
 } 
   
-  .productos {
-    
+  .productos {  
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
