entrega casi terminada de segunda entrega del proyecto

--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -12,6 +12,7 @@
         <input type="file" required id="img" name="img" placeholder="Foto!" />
     </form>
     <button type="submit" id="boton">Enviar</button> <br>
+    <button type="submit" id="addToCart">Agregar al Carrito</button>
     </div>
     <button class="cart" onclick="">Mostrar Carrito</button>
 
