--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="/public/css/products.css">
+    <title></title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
     <div id="products">
 
   </div>
-  <button class="btn btn-warning">Mostrar Carrito</button>
+  <button class="btn btn-warning" id="showCart">Mostrar Carrito</button>
 
   </body>
 
