arreglos segunda entrega

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,3 +38,26 @@ body{
 .nameProduct{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+.contForm{
+    background: #8e9eab;
+    background: -webkit-linear-gradient(to right, #aaaaaa, #8e9eab);
+    background: linear-gradient(to right, #c8caca, #8e9eab);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100vh;
+    height: 300px;    
+    margin-left: -50vh;
+    margin-top: -150px;
+}
+
+.fondo{
+  background: #c2e59c;
+  background: -webkit-linear-gradient(to left, #64b3f4, #c2e59c);
+  background: linear-gradient(to left, #64b3f4, #c2e59c);
+}
+
+.navBar{
+  background-color: rgb(196, 248, 255);
+}
