--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -7,12 +7,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
-  <body>
-    <div id="products">
+  <body class="bg-success">
+    <h2 class="ps-3 pt-2">Productos</h2>
+    <div class="row pt-2 ms-2" style="gap: 10px;" id="products">
 
   </div>
-  <button class="btn btn-warning" id="showCart">Mostrar Carrito</button>
-
   </body>
 
     <script src="/socket.io/socket.io.js"></script>
